--- a/index.html
+++ b/index.html
@@ -176,10 +176,10 @@
         const textElements = [
             { id: 'kode', x: 393, y: 177, size: 43, color: '#ca0e20' },
             { id: 'exp', x: 406, y: 230, size: 43, color: '#ca0e20' },
-            { id: 'firstName', x: 393, y: 271, size: 38, color: 'white' }, // Warna diubah ke putih
-            { id: 'endName', x: 391, y: 306, size: 38, color: 'white' }, // Warna diubah ke putih
-            { id: 'address1', x: 351, y: 342, size: 28, color: 'white' }, // Warna diubah ke putih
-            { id: 'address2', x: 351, y: 371, size: 28, color: 'white' }, // Warna diubah ke putih
+            { id: 'firstName', x: 393, y: 271, size: 38, color: 'black' }, // Perbaikan: Kembali ke hitam
+            { id: 'endName', x: 391, y: 306, size: 38, color: 'black' }, // Perbaikan: Kembali ke hitam
+            { id: 'address1', x: 351, y: 342, size: 28, color: 'black' }, // Perbaikan: Kembali ke hitam
+            { id: 'address2', x: 351, y: 371, size: 28, color: 'black' }, // Perbaikan: Kembali ke hitam
             { id: 'dob', x: 409, y: 406, size: 37, color: '#ca0e20' }
         ];
 
@@ -374,4 +374,5 @@
     </script>
 </body>
 </html>
+
 
